fix kubectl terminal not showing bottom line in some browser (#5444)

--- a/app/kubernetes/components/kubectl-shell/kubectl-shell.css
+++ b/app/kubernetes/components/kubectl-shell/kubectl-shell.css
@@ -60,7 +60,7 @@ ul.sidebar li .shell-item-center a:hover {
   bottom: 0;
   left: 0;
   width: 100vw;
-  height: 480px;
+  height: 495px;
   z-index: 1000;
 }
 
